RESOLVED FIXED96920
[EFL] min-device-width failures in media tests
https://bugs.webkit.org/show_bug.cgi?id=96920
Summary [EFL] min-device-width failures in media tests
Chris Dumez
Reported 2012-09-17 07:48:47 PDT
The following test cases fail on the bots: fast/media/invalid-lengths.html fast/media/matchmedium-query-api.html fast/media/media-query-list-01.html The diffs look like: -PASS: "(min-device-width: 1px)" evaluates to true. +FAIL: "(min-device-width: 1px)" evaluates to false. -"(min-device-width: 100px)" evaluates to true: PASS +"(min-device-width: 100px)" evaluates to false: FAIL -"(min-device-width: 100px)" evaluates to true: PASS +"(min-device-width: 100px)" evaluates to false: FAIL
Attachments
Patch (3.22 KB, patch)
2012-09-17 11:55 PDT, Chris Dumez
kenneth: review+
Patch for landing (3.40 KB, patch)
2012-09-18 05:02 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2012-09-17 10:35:05 PDT
They fail on the bot because it does not run X. screenRect() in platform/efl returns O width and height in that case.
Chris Dumez
Comment 2 2012-09-17 10:49:52 PDT
media/video-source-media.html fails for the same reason
Chris Dumez
Comment 3 2012-09-17 10:50:01 PDT
*** Bug 96922 has been marked as a duplicate of this bug. ***
Chris Dumez
Comment 4 2012-09-17 11:55:47 PDT
Kenneth Rohde Christiansen
Comment 5 2012-09-18 04:11:02 PDT
Comment on attachment 164431 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=164431&action=review > Source/WebCore/platform/efl/PlatformScreenEfl.cpp:117 > + int width = 800, height = 600; I think a comment is valid here. also it should be two lines
Chris Dumez
Comment 6 2012-09-18 05:02:21 PDT
Created attachment 164534 [details] Patch for landing Take Kenneth's feedback into consideration. Could someone please cq+?
Raphael Kubo da Costa (:rakuco)
Comment 7 2012-09-18 05:32:35 PDT
Comment on attachment 164431 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=164431&action=review >> Source/WebCore/platform/efl/PlatformScreenEfl.cpp:117 >> + int width = 800, height = 600; > > I think a comment is valid here. also it should be two lines Does it work only because the dimensions match the ones used in DRT/WTR?
Chris Dumez
Comment 8 2012-09-18 05:35:19 PDT
(In reply to comment #7) > (From update of attachment 164431 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=164431&action=review > > >> Source/WebCore/platform/efl/PlatformScreenEfl.cpp:117 > >> + int width = 800, height = 600; > > > > I think a comment is valid here. also it should be two lines > > Does it work only because the dimensions match the ones used in DRT/WTR? No, any realistic screen size would make those tests pass. Currently we return 0x0 which of course is unrealistic. Tests usually checks something like "width > 100px".
Raphael Kubo da Costa (:rakuco)
Comment 9 2012-09-18 05:47:17 PDT
Comment on attachment 164534 [details] Patch for landing Right.
WebKit Review Bot
Comment 10 2012-09-18 05:54:40 PDT
Comment on attachment 164534 [details] Patch for landing Clearing flags on attachment: 164534 Committed r128880: <http://trac.webkit.org/changeset/128880>
WebKit Review Bot
Comment 11 2012-09-18 05:54:45 PDT
All reviewed patches have been landed. Closing bug.
Raphael Kubo da Costa (:rakuco)
Comment 12 2012-09-18 07:45:02 PDT
For the record, the fast/dom/Window tests still fail here and on the bots, so I have skipped them again in <http://trac.webkit.org/changeset/128893>.
Note You need to log in before you can comment on or make changes to this bug.