[EFL] min-device-width failures in media tests https://bugs.webkit.org/show_bug.cgi?id=96920

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-09-18
Reviewed by Kenneth Rohde Christiansen.

Source/WebCore:

Return a realistic value (800x600) for screen resolution if
it cannot be detected, instead of returning (0x0).

This allows for some tests to pass on the build bots
where X is not running.

No new tests, already covered by existing tests.

* platform/efl/PlatformScreenEfl.cpp:
(WebCore::screenRect):

LayoutTests:

Unskip several test cases which should pass on the
build bots now that we return a realistic screen
resolution whenever it cannot be detected.

* platform/efl/TestExpectations:

Canonical link: https://commits.webkit.org/114946@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@128880 268f45cc-cd09-0410-ab3c-d52691b4dbfc